--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trainingprogramweb",
+  "name": "car-rent-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.7",
     "@react-router/node": "^7.3.0",
     "@tailwindcss/vite": "^4.0.11",
     "isbot": "^5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
