solved a problem with styles of inputs

--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@mui/material": "^6.4.7",
     "@react-router/node": "^7.3.0",
     "@tailwindcss/vite": "^4.1.4",
+    "classnames": "^2.5.1",
     "isbot": "^5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@react-router/dev": "^7.3.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
