--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.7",
     "@react-router/node": "^7.3.0",
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "isbot": "^5",
     "react": "^19.0.0",
